--- a/About programming/JavaScript/数组排列方法.html
+++ b/About programming/JavaScript/数组排列方法.html
@@ -35,7 +35,7 @@
         function maopao(arr) {
             let len = arr.length
             // 外层循环控制比较的轮数
-            for (let i = 0; i < len; i++) {
+            for (let i = 0; i < len - 1; i++) {
                 // 内层循环控制每一轮比较的次数
                 for (let j = 0; j < len - i - 1; j++) {
                     // 如果前一个元素大于后一个元素，则交换位置
