--- a/About programming/JavaScript/数组排列方法.html
+++ b/About programming/JavaScript/数组排列方法.html
@@ -78,6 +78,7 @@
                 perIndex = i - 1
                 while (perIndex >= 0 && current < arr[perIndex]) {
                     arr[perIndex + 1] = arr[perIndex]
+                    perIndex--
                 }
                 arr[perIndex + 1] = current
             }
